server/vm-k8s/k8s/base/webpage2kindle/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webpage2kindle
  name: webpage2kindle
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webpage2kindle
  strategy: {}
  template:
    metadata:
      labels:
        app: webpage2kindle
    spec:
      volumes:
      - name: shared-data
        persistentVolumeClaim:
          claimName: webpage2kindle
      containers:
      - image: registry.gitlab.com/morawskim/webpage2kindle/symfony-app:main
        imagePullPolicy: Always
        name: webpage2kindle
        volumeMounts:
        - name: shared-data
          mountPath: /app/var/data
        resources:
          requests:
            memory: 64Mi
          limits:
            memory: 254Mi
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webpage2kindle-consumer
  name: webpage2kindle-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webpage2kindle-consumer
  strategy: {}
  template:
    metadata:
      labels:
        app: webpage2kindle-consumer
    spec:
      volumes:
      - name: shared-data
        persistentVolumeClaim:
          claimName: webpage2kindle
      containers:
      - image: registry.gitlab.com/morawskim/webpage2kindle/symfony-app:main
        name: consumer
        command: [ "/app/bin/console", "rabbitmq:multiple-consumer", "-m", "50", "pipeline" ]
        volumeMounts:
        - name: shared-data
          mountPath: /app/var/data
        resources:
          requests:
            cpu: 200m
            memory: 32M
          limits:
            cpu: 500m
            memory: 64M
        livenessProbe:
          exec:
            command:
              - /app/bin/console
              - app:check-connection-to-rabbitmq
          initialDelaySeconds: 5
          periodSeconds: 30
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webpage2kindle-node
  name: webpage2kindle-node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webpage2kindle-node
  strategy: {}
  template:
    metadata:
      labels:
        app: webpage2kindle-node
    spec:
      containers:
      - image: registry.gitlab.com/morawskim/webpage2kindle/node-microservice:main
        imagePullPolicy: Always
        name: webpage2kindle
        command:
            - node
        args:
            # - --import
            # - /app/instrument.mjs
            - /app/microservice.js
        resources: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webpage2kindle-go
  name: webpage2kindle-go
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webpage2kindle-go
  strategy: {}
  template:
    metadata:
      labels:
        app: webpage2kindle-go
    spec:
      containers:
      - image: registry.gitlab.com/morawskim/webpage2kindle/go-microservice:main
        imagePullPolicy: Always
        name: webpage2kindle
        args:
          - --http
          - :8080
        resources: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webpage2kindle-redis
  name: webpage2kindle-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webpage2kindle-redis
  strategy: {}
  template:
    metadata:
      labels:
        app: webpage2kindle-redis
    spec:
      containers:
      - image: redis:7.0-alpine
        name: redis
        args: ["--maxmemory", "50mb", "--maxmemory-policy", "allkeys-lru"]
        resources: {}
