server/vm-k8s/k8s/base/webpage2kindle/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: webpage2kindle
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`kindle.10.0.2.15.nip.io`)
      services:
        - kind: Service
          name: webpage2kindle
          port: 80
      middlewares:
        - name: add-x-forwarded-proto
